# HSCodeLLM

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
examples/: basic_usage.py
src/hscode/: __init__.py  __main__.py  api.py  classifier.py  cli.py  cn_retriever.py  config.py  llm.py  logging_config.py  models.py  openrouter.py
src/hscode/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_cn_retriever.py  test_llm.py  test_models.py  test_providers_base.py
