[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hscode"
version = "0.2.0"
description = "Model-agnostic EU HS / Combined Nomenclature code classifier (LangChain-powered)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HSCode Contributors" }]
keywords = ["hs", "hs-code", "cn", "intrastat", "tariff", "classification", "llm", "langchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pydantic>=2.0",
    # LangChain core is required for the model-agnostic chat / structured-output API.
    "langchain>=0.3",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
# Each extra installs the integration package LangChain needs to talk to that provider.
# Use a combined "all" extra to get everything in one go.
openai     = ["langchain-openai>=0.2"]
azure      = ["langchain-openai>=0.2"]
openrouter = ["langchain-openrouter>=0.2"]   # provides the ChatOpenRouter integration
anthropic  = ["langchain-anthropic>=0.2"]
google     = ["langchain-google-genai>=2.0"]
ollama     = ["langchain-ollama>=0.2"]
all = [
    "langchain-openai>=0.2",
    "langchain-openrouter>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "mypy>=1.5",
    "ruff>=0.4",
    "responses>=0.24",
]

[project.scripts]
hscode = "hscode.cli:main"

[project.urls]
Homepage = "https://github.com/Jonthe-432/HSCodeLLM"
Issues   = "https://github.com/Jonthe-432/HSCodeLLM/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hscode = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
